# GossipGene

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  agents.py  config.py  db.py  embeddings.py  main.py  pyproject.toml  retrieval.py
data-science/: README.md  eval_queries.py  gold.py  pyproject.toml
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  useGossipChat.js
