[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pandas = "*"
numpy = "*"
matplotlib = "*"
seaborn = "*"
jupyter = "*"
ipykernel = "*"
duckdb = "*"
openpyxl = "*"
pydantic-ai = "*"
fastapi = "*"
rank-bm25 = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
